@startuml
package com.ananya.sportal.model {
    class Student {
        - name: String
        - sap: String
        - contact: String
        + Student()
        + Student(name: String, sap: String, contact: String)
        + getName(): String
        + setName(name: String): void
        + getSap(): String
        + setSap(sap: String): void
        + getContact(): String
        + setContact(contact: String): void
    }
}

package com.ananya.sportal.db {
    class DatabaseConnection {
        {static} - URL: String
        {static} - USER: String
        {static} - PASSWORD: String
        {static} + getConnection(): Connection
    }
}

package com.ananya.sportal.gui {
    class MainPanel {
        - nameField: JTextField
        - sapField: JTextField
        - contactField: JTextField
        - saveButton: JButton
        + MainPanel()
        - saveStudent(): void
        - viewAllStudents(): void
        + main(args: String[]): void
    }
}

MainPanel --> Student : uses
MainPanel --> DatabaseConnection : uses
@enduml
